# zinc

./: .gitignore  .performance-baseline.json  .prettierignore  .prettierrc  AGENTS.md  COMMIT_MESSAGE.md  Cargo.toml  DEVFLOW_SETUP_COMPLETE.md  FINAL_VERIFICATION.md  LICENCE.md  LICENSE.md  PINNED_VERSIONS.md  PINNING_COMPLETE.md  README.md  SETUP.md  VERIFICATION.md  bunfig.toml  components.json  eslint.config.js  eslint.config.mjs  justfile  knip.json  lefthook.yml  package-lock.json  package.json  tsconfig.json  turbo.json  vite.config.ts  vitest.config.js  vitest.config.ts
.devflow/memory/: activeContext.md  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit  pre-push
.serena/: project.yml
.storybook/: main.ts  preview.ts
backlog/: config.yml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
dashboard/: knip.json
docs/: 00-OVERVIEW.md  01-RULES-LAYER.md  02-MEMORY-LAYER.md  03-DOCS-LAYER.md  04-PLANNING-LAYER.md  05-INTEGRATION.md  ARCHITECTURE-VISUAL.md  ARCHITECTURE.md  CHANGELOG.md  CI-QUICK-REF.md  CI.md  CONTRIBUTING.md  DOCS.md  IMPLEMENTATION-CHECKLIST.md  MEMORY.md  README.md  SECURITY.md  SETUP.md  SONARJS-INTEGRATION.md  STORAGE-ARCHITECTURE.md  TESTING.md  USAGE.md
examples/: zed-settings.json
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check-console.sh  ci.sh  copy-templates.ts  test-performance.ts  update-baseline.ts
src/: App.css  App.tsx  app.tsx  index.test.ts  index.ts  main.tsx  server.ts
src-tauri/: Cargo.toml  tauri.conf.json
(+310 files in other folders)
