[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmcp = { version = "0.8.0", features = ["server"] }
schemars = "1.1"
rmcp-macros = "0.8.0"
async-trait = "0.1"
